[package]
name        = "simple_json"
version     = "0.2.3"
authors     = ["Rafael Gomes Dantas <rafagd@gmail.com>"]

description = "A simple runtime JSON parser."
repository  = "https://github.com/Rafagd/json-rs"
readme      = "README.md"
keywords    = [ "json", "parser", "simple", "easy" ]
license     = "BSD-2-Clause"

edition="2018"
